[package]
name = "amm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = {version="1.0.2",features = ["init-if-needed"]}
anchor-spl = "1.0.2"
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve" }

# [lints.rust]
# unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']


[dev-dependencies]
litesvm = "0.12.0"
litesvm-token = "0.12.0"
solana-keypair = "3.1.2"
# (Transaction v4.X not supported by liteSVM ??).
solana-message = "3.1.0"
solana-pubkey = "3.0.0"
solana-signer = "3.0.0"
solana-transaction = { version = "3.1.0", features = ["bincode"] }
solana-clock = "3.0"
